//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table addresses {
  id Int [pk, increment]
  postal_code String [not null]
  address String [not null]
  profile_id Int [not null]
  created_at DateTime
  updated_at DateTime
  profiles profiles [not null]

  Note: 'The underlying table does not contain a valid unique identifier and can therefore currently not be handled by the Prisma Client.'
}

Table call_charges {
  phone_number String [not null]
  date DateTime [not null]
  amount Float [not null]
  carrier_type_code Int [not null]
  created_at DateTime [default: `now()`, not null]
  id Int [pk, increment]

  indexes {
    (phone_number, date) [unique]
  }
}

Table cell_phone_company_login_details {
  claim_code String [unique, not null]
  login_id String [not null]
  carrier_type_code Int [not null]
}

Table data_charges {
  id Int [pk, increment]
  capacity Float [not null]
  price Int [not null]
  available_count Int [not null]
  data_charge_histories data_charge_histories [not null]
  plan_groups plan_groups
  plan_groups_id Int
}

Table data_charge_histories {
  id Int [pk, increment]
  profile_id Int [not null]
  data_charge_id Int [not null]
  created_at DateTime
  updated_at DateTime
  data_charges data_charges [not null]
  profiles profiles [not null]
}

Table data_traffics {
  phone_number String [not null]
  date DateTime [not null]
  amount Float [not null]
  carrier_type_code Int [not null]
  created_at DateTime [default: `now()`, not null]
  id Int [pk, increment]

  indexes {
    (phone_number, date) [unique]
  }
}

Table data_traffic_charges {
  phone_number String [not null]
  date DateTime [not null]
  amount Float [not null]
  carrier_type_code Int [not null]
  created_at DateTime [default: `now()`, not null]
  id Int [pk, increment]

  indexes {
    (phone_number, date) [unique]
  }
}

Table international_call_charges {
  phone_number String [not null]
  date DateTime [not null]
  amount Float [not null]
  carrier_type_code Int [not null]
  created_at DateTime [default: `now()`, not null]
  id Int [pk, increment]

  indexes {
    (phone_number, date) [unique]
  }
}

Table profiles {
  id Int [pk, increment]
  name String [not null]
  name_kana String [not null]
  birthday DateTime [not null]
  contact_phone_number String [not null]
  cell_phone_number String [not null]
  email String [unique, not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime
  addresses addresses [not null]
  data_charge_histories data_charge_histories [not null]
  sims sims [not null]
  visas visas [not null]
}

Table failed_jobs {
  id Int [pk, increment]
  uuid String [unique, not null]
  connection String [not null]
  queue String [not null]
  payload String [not null]
  exception String [not null]
  failed_at DateTime [default: `now()`, not null]
}

Table gtn_id_tokens {
  id Int [pk, increment]
  token String [not null]
  expired_at DateTime [not null]
}

Table migrations {
  id Int [pk, increment]
  migration String [not null]
  batch Int [not null]
}

Table plan_groups {
  id Int [pk, increment]
  deadline_day String
  deadline_time String
  available_change_plan Boolean [not null, default: false]
  current_plan Boolean [not null, default: false]
  data_charges data_charges [not null]
  plan_groups_relations_plan_groupsToplan_groups_relations_available_change_plan_group_id plan_groups_relations [not null]
  plan_groups_relations_plan_groupsToplan_groups_relations_current_plan_group_id plan_groups_relations [not null]
  plans plans [not null]
}

Table plan_groups_relations {
  id Int [pk, increment]
  current_plan_group_id Int [not null]
  available_change_plan_group_id Int [not null]
  plan_groups_plan_groupsToplan_groups_relations_available_change_plan_group_id plan_groups [not null]
  plan_groups_plan_groupsToplan_groups_relations_current_plan_group_id plan_groups [not null]

  Note: 'The underlying table does not contain a valid unique identifier and can therefore currently not be handled by the Prisma Client.'
}

Table plans {
  id Int [pk, increment]
  name String [not null]
  happiness_name String [not null]
  plan_group_id Int [not null]
  capacity Float
  carrier_type_code Int [not null, default: 99]
  price Int
  plan_groups plan_groups [not null]
}

Table sims {
  id Int [pk, increment]
  sim_number String [not null]
  happiness_id String [unique, not null]
  canceled_at DateTime
  profile_id Int [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  profiles profiles [not null]
}

Table user_identification_admin_tokens {
  id Int [pk, increment]
  token String [not null]
  expired_at DateTime [not null]
}

Table videos {
  id Int [pk, increment]
  video_id String [not null]
  thumb String [not null]
  en_title String [not null]
  id_title String [not null]
  ja_title String [not null]
  ko_title String [not null]
  ne_title String [not null]
  vi_title String [not null]
  zh_Hans_title String [not null]
  zh_Hant_title String [not null]
}

Table visas {
  id Int [pk, increment]
  classification_code Int [not null, default: 999]
  period_of_validity_date DateTime
  profile_id Int [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  profiles profiles [not null]
}

Ref: addresses.profile_id > profiles.id [delete: Cascade]

Ref: data_charges.plan_groups_id > plan_groups.id

Ref: data_charge_histories.data_charge_id > data_charges.id [delete: Cascade]

Ref: data_charge_histories.profile_id > profiles.id [delete: Cascade]

Ref: plan_groups_relations.available_change_plan_group_id > plan_groups.id [delete: Cascade]

Ref: plan_groups_relations.current_plan_group_id > plan_groups.id [delete: Cascade]

Ref: plans.plan_group_id > plan_groups.id [delete: Cascade]

Ref: sims.profile_id > profiles.id [delete: Cascade]

Ref: visas.profile_id > profiles.id [delete: Cascade]